--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
 <body>
   <main class="card" aria-live="polite">
     <header class="top">
-      <div>
-        <div class="location" id="location">Loading…</div>
-        <div class="time" id="time"></div>
-      </div>
-      <div class="badge" id="elementBadge">—</div>
-    </header>
+  <div class="left">
+    <div class="location" id="location">Loading…</div>
+    <div class="time" id="time"></div>
+  </div>
+
+  <div class="controls">
+    <div class="picker">
+      <input id="cityInput" type="text" placeholder="Search city…" autocomplete="off" />
+      <div id="suggestions" class="suggestions" hidden></div>
+    </div>
+    <div class="badge" id="elementBadge">—</div>
+  </div>
+</header>
+
 
     <section class="mid">
       <div class="temp">
